Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22699

Cannot hide "running tests" pop up after getting FATAL error "Executable path is empty. ()"

XMLWordPrintable

    • Linux/X11
    • 8f6d99dc2965930a17fb18fe6f7d6ce57723cc1a (qt-creator/qt-creator/4.10)

      The notification pop-up in "Progress details" won't hide even by closing it manually, after getting an error

      FATAL "Executable path is empty. (qquickloader)" 

      This happens when a test's build fails, so the test executable is not found. If the pop-up is closed manually the "Test results" tab logs that the test is cancelled by the user, however the pop-up stays.

        For Gerrit Dashboard: QTCREATORBUG-22699
        # Subject Branch Project Status CR V

            cstenger Christian Stenger
            assam Assam Boudjelthia
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes